# vscode-vcpkg-template

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp
